# nimble

./: CMakeLists.txt  main.c  settings.ini
include/nimble/: action.h  application.h  buffer.h  config.h  editor.h  finder.h  ini.h  insert.h  motions.h  normal.h  settings.h  text.h  text_nav.h
lib/hashmap/: hashmap.c  hashmap.h
lib/lsp/: CMakeLists.txt  lsp.c  lsp.h  message_queue.c  message_queue.h
lib/text/: CMakeLists.txt  string.c  string.h  string_array.c  string_array.h
src/: action.c  application.c  buffer.c  config.c  editor.c  finder.c  ini.c  insert.c  motions.c  normal.c  settings.c  text.c  text_nav.c
tests/: CMakeLists.txt  test_main.c  test_string.c  test_string_array.c
